--- a/public/css/style.css
+++ b/public/css/style.css
@@ -654,7 +654,7 @@ a.active {
     float: left;
 }
 
-.cocial-share-container .fb-share-button {
+.cocial-share-container .fb-share-button, .cocial-share-container .fb-send {
     float: left;
     margin-right: 15px;
 }
